--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHienMau/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHienMau/Index.cshtml
@@ -32,7 +32,7 @@
     }
 </div>
 
-@using (Html.BeginForm("Index", "DotHiemMau", FormMethod.Get))
+@using (Html.BeginForm("Index", "DotHienMau", FormMethod.Get))
 {
     @*Tìm Kiếm *@
     <div class="main-card mb-3 card">
@@ -69,7 +69,7 @@
     <div class="app-header-left">
         <ul class="header-menu nav">
             <li class="btn btn-success">
-                <a href="@Url.Action("CreateDHM", "DotHiemMau")" style="color:white">
+                <a href="@Url.Action("CreateDHM", "DotHienMau")" style="color:white">
                     <i class="nav-link-icon fa fa-edit">   Thêm đợt hiến máu</i>
                 </a>
             </li>
