--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -23,7 +23,7 @@
                 </a>
                 <ul>
                     <li>
-                        <a href="/Admin/DotHiemMau/Index">
+                        <a href="/Admin/DotHienMau/Index">
                             <i class="metismenu-icon"></i>
                             Đăng bài
                         </a>
