--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/NguoiDung.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/NguoiDung.cshtml
@@ -101,8 +101,8 @@
                                             <tr>
                                                 <th style="width:400px">
                                                     <div>
-                                                        <a>Email</a>
-                                                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
+                                                        <a>Ngày Sinh</a>
+                                                        @Html.EditorFor(model => model.ngaySinh, new { htmlAttributes = new { @class = "single-input", @type = "date", @for = "datepicker" } })
                                                     </div>
                                                 </th>
                                                 <th class="col-lg-6">
