--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
@@ -46,11 +46,12 @@
                             </div>
                         }
                     </div>
-                    <div>
 
-                        @using (Html.BeginForm("Index", "NguoiDung", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+                    <div>
+                        @using (Html.BeginForm("CapnhatTTCN", "NguoiDung", FormMethod.Post, new { @enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
+     
                             <div class="panel-body" style="font-weight: bold; text-align: center; color: red">
                                 @if (@ViewBag.ThongBao != null)
                                 {
@@ -60,26 +61,22 @@
                             <div class="row">
                                 <div class="col-lg-12 col-md-8">
                                     <form action="#">
-                                        <table class="mt-10">
-                                            <tr>
-                                                <th style="width:735px">
-                                                    <a>Mã người dùng </a>
-                                                    @Html.HiddenFor(model => model.IdTTCN)
-                                                </th>
-                                            </tr>
-                                        </table>
+                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                        @Html.HiddenFor(model => model.IdTTCN)
                                         <table class="mt-10">
                                             <tr>
                                                 <th style="width:400px">
                                                     <div>
                                                         <a>Họ và tên </a>
                                                         @Html.EditorFor(model => model.hoTen, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
+                                      
                                                     </div>
                                                 </th>
                                                 <th class="col-lg-6">
                                                     <div>
                                                         <a>Số điện thoại</a>
                                                         @Html.EditorFor(model => model.soDT, new { htmlAttributes = new { @class = "single-input", @type = "number" } })
+                                             
                                                     </div>
                                                 </th>
                                             </tr>
@@ -88,14 +85,15 @@
                                             <tr>
                                                 <th style="width:400px">
                                                     <div>
-                                                        <a>Email</a>
-                                                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
+                                                        <a>Tài khoản</a>
+                                                        @Html.EditorFor(model => model.userName, new { htmlAttributes = new { @class = "single-input", @type = "text", @readonly = "readonly" } })
                                                     </div>
                                                 </th>
                                                 <th class="col-lg-6">
                                                     <div>
                                                         <a>CMND / CCCD </a>
                                                         @Html.EditorFor(model => model.CCCD, new { htmlAttributes = new { @class = "single-input", @type = "number" } })
+                                          
                                                     </div>
                                                 </th>
                                             </tr>
@@ -105,14 +103,17 @@
                                                 <th style="width:400px">
                                                     <div>
                                                         <a>Giới tính </a>
-                                                        @Html.DropDownListFor(model => model.gioiTinh, new[] { new SelectListItem { Text = "Nam", Value = "M" },
-                                                       new SelectListItem { Text = "Nữ", Value = "F" } }, new { @class = "single-input" })
+                                                        @Html.DropDownListFor(model => model.gioiTinh, new[] { new SelectListItem { Text = "Nam", Value = "True" },
+                                                       new SelectListItem { Text = "Nữ", Value = "False" } }, new { @class = "single-input" })
+                                       
 
                                                     </div>
                                                 </th>
                                                 <th class="col-lg-6">
                                                     <a>Ngày sinh </a>
-                                                    @Html.EditorFor(model => model.ngaySinh, new { htmlAttributes = new { @class = "single-input", @type = "date", @for = "datepicker" } })
+                                                    @Html.EditorFor(model => model.ngaySinh, new { htmlAttributes = new { @class = "single-input", @type = "text", @readonly = "readonly" } })
+                                                    @Html.ValidationMessageFor(model => model.ngaySinh, "", new { @class = "text-danger" })
+
                                                 </th>
                                             </tr>
                                         </table>
@@ -122,6 +123,7 @@
                                                     <div>
                                                         <a>Lần hiến máu </a>
                                                         @Html.EditorFor(model => model.soLanHM, new { htmlAttributes = new { @class = "single-input", @type = "number" } })
+                                             
                                                     </div>
                                                 </th>
                                                 <th class="col-lg-6">
@@ -142,10 +144,12 @@
                                                 <th style="width:400px">
                                                     <a>Trình độ học vấn </a>
                                                     @Html.EditorFor(model => model.trinhDo, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
+                                           
                                                 </th>
                                                 <th class="col-lg-6">
                                                     <a>Nghề nghiệp </a>
-                                                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
+                                                    @Html.EditorFor(model => model.ngheNghiep, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
+                                   
                                                 </th>
                                             </tr>
                                         </table>
@@ -160,6 +164,7 @@
                                                 <th style="width:735px">
                                                     <a>Địa chỉ tạm trú</a>
                                                     @Html.EditorFor(model => model.diaChi, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
+                                  
                                                 </th>
                                             </tr>
                                         </table>
