--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/NguoiDung.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/NguoiDung.cshtml
@@ -95,7 +95,6 @@
                                                     </div>
                                                 </th>
                                             </tr>
-
                                         </table>
                                         <table class="mt-10">
                                             <tr>
@@ -141,8 +140,36 @@
 
                     </div>
                 </div>
+                <hr/>
+                <h2>Lưu ý</h2>
+                <table class="mt-10">
+                    <tr>
+                        <th style="width:400px">
+                            <div>
+                                <a>Tài khoản thuộc các định dạng: [kitu]_gmail.com , [kitukitu]_[kitu]_.com </a>
+                            </div>
+                        </th>
+                        <th class="col-lg-6">
+                            <div>
+                                <a>Số điện thoại : từ 8-12 số</a>
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th style="width:400px">
+                            <div>
+                                <a>Mật khẩu : lớn hơn 9 ký tự </a>
+                            </div>
+                        </th>
+                        <th class="col-lg-6">
+                            <div>
+                                <a>Ngày sinh: phải đủ 18 tuổi</a>
+                            </div>
+                        </th>
+                    </tr>
+                </table>
             </div>
-
+          
         </div>
     </div>
 </section>
