--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
@@ -180,7 +180,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("LienKetNV","NguoiDung")" class="d-flex">
+                    <a href="@Url.Action("LienKetNV","NhanVienYTe")" class="d-flex">
                         <p>Nhân viên bệnh viên</p>
                     </a>
                 </li>              
