--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/DKDVLK.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/DKDVLK.cshtml
@@ -11,7 +11,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <div class="breadcrumb_iner_item">
-                        <h2>Thông tin bệnh viện</h2>
+                        <h2>Đăng ký liên kết</h2>
                     </div>
                 </div>
             </div>
@@ -34,14 +34,14 @@
 
             <div class="col-lg-8 mb-5 mb-lg-0">
                 <div>
-                    <h3 class="mb-30">Cập nhật thông đơn vị</h3>
+                    <h3 class="mb-30">Đăng ký đơn vị liên kết</h3>
                     <hr />
                     <div class="panel-body">
                         @if (TempData["AlertMessage"] != null)
                         {
-                            <div id="AlertBox" class="alert @TempData["AlertType"] hide">
-                                @TempData["AlertMessage"]
-                            </div>
+                         <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                             @TempData["AlertMessage"]
+                         </div>
                         }
                     </div>
                     
@@ -49,6 +49,8 @@
                         @using (Html.BeginForm("DKDVLK", "DVLK", new { @enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
                             <div class="panel-body" style="font-weight: bold; text-align: center; color: red">
                                 @if (@ViewBag.ThongBao != null)
                                 {
@@ -58,12 +60,14 @@
                             <div class="row">
                                 <div class="col-lg-12 col-md-8">
                                     <form action="#">
+
                                         <table class="mt-10">
                                             <tr>
                                                 <th style="width:400px">
                                                     <div>
+                                                        @Html.HiddenFor(model => model.IdDVLK)
                                                         <label>Mã người dùng</label>
-                                                        @Html.EditorFor(model => model.idTTCN, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                                                        @Html.EditorFor(model => model.idTTCN, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly", @Value = ViewBag.IdUser } })
                                                     </div>
                                                 </th>
                                                 <th class="col-lg-6">
@@ -97,11 +101,12 @@
                                             <tr>
                                                 <th style="width:735px">
                                                     <label>Địa chỉ</label>
-                                                    @Html.EditorFor(model => model.diaChi, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.EditorFor(model => model.diaChi, new { htmlAttributes = new { @class = "single-input", @type = "text" } })
                                                     @Html.ValidationMessageFor(model => model.diaChi, "", new { @class = "text-danger" })
-                                                 
+
+
                                                 </th>
-                                            </tr
+                                            </tr>
                                         </table>
                                         <table>
                                             <tr>
@@ -113,16 +118,19 @@
                                                 </th>
                                             </tr>
                                         </table>
+                                        @Html.HiddenFor(model => model.trangThai)
                                         <div class="mt-10">
                                         </div>
                                         <div class="mt-10">
-                                            </div>
+                                        </div>
                                     </form>
+                                    <div class="text-center" style="margin-top:20px">
+                                        <button type="submit" class="genric-btn primary-border radius"> Đăng ký liên kết</button>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="text-center " style="margin-top:20px">
-                                <a class="genric-btn primary-border radius" href="#">Cập nhật</a>
-                            </div>
+
+
                         }
                     </div>
 
