--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
@@ -10,18 +10,18 @@
             <ul class="list cat-list">
 
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("CapnhatTTDV","DVLK")" class="d-flex">
                         <p>Cập nhật thông đơn vị</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="d-flex">
-                        <p>Đăng ký đợt hiến máu</p>
+                        <p>Đăng bài</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
-                        <p>Đăng bài</p>
+                    <a href="@Url.Action("EditKQHM","NhanVienYTe")" class="d-flex">
+                        <p>Danh sách đăng ký</p>
                     </a>
                 </li>
                 <li>
@@ -40,17 +40,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
-                        <p>Tình trạng sức khỏe</p>
+                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
+                        <p>Xem tình trạng sức khỏe</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
                     </a>
                 </li>
@@ -93,27 +93,25 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
-                        <p>Cập nhật thông tin</p>
+                    <a href="@Url.Action("Index","NguoiDung")" class="d-flex">
+                        <p>Cập nhật thông tin cá nhân</p>
                     </a>
                 </li>
             </ul>
         </aside>
-
     }
     @if (session.AuthorID == "Q05")
     {
         <aside class="single_sidebar_widget post_category_widget">
             <h4 class="widget_title">Nhân viên y tế</h4>
             <ul class="list cat-list">
-
                 <li>
-                    <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
+                    <a href="@Url.Action("EditKQHM","NhanVienYTe")" class="d-flex">
                         <p>Cập nhật Kết quả hiến máu</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("XemNV","NhanVienYTe")" class="d-flex">
                         <p>Xem nhiệm vụ</p>
                     </a>
                 </li>
@@ -129,17 +127,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
-                        <p>Tình trạng sức khỏe</p>
+                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
+                        <p>Xem tình trạng sức khỏe</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
                     </a>
                 </li>
@@ -157,17 +155,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem tình trạng sức khỏe</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
                     </a>
                 </li>
@@ -182,7 +180,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("LienKetNV","NhanVienYTe")" class="d-flex">
                         <p>Nhân viên bệnh viên</p>
                     </a>
                 </li>
@@ -190,5 +188,6 @@
         </aside>
     }
 </div>
+
 
 
